광고 API 및 swagger 문서 수정
